Opened 4 years ago
Closed 5 months ago
#16692 closed bug (fixed)
SEM: Test conformance/interfaces/sem_init/7-1.c FAILED
Reported by: | cocobean | Owned by: | nobody |
---|---|---|---|
Priority: | normal | Milestone: | Unscheduled |
Component: | System/POSIX | Version: | R1/Development |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
This sample test aims to check the following assertion:
sem_init returns -1 and sets errno to ENOSPC if the system lacks a resource or SEM_NSEMS_MAX has been reached.
The steps are:
-> Try and sem_init SEM_NSEMS_MAX semaphores.
-> Try and sem_init an additional semaphore.
The test fails if the last creation does not return an error.
Ref: conformance/interfaces/sem_init/7-1.c
Tested on: Haiku hrev54811 x86_gcc2
Expected result: Test passed
Test result: [01:15:36]Test conformance/interfaces/sem_init/7-1.c FAILED: We were able to sem_init more than SEM_NSEMS_MAX semaphores
Change History (2)
comment:2 by , 5 months ago
Keywords: | POSIX semaphores sem_init removed |
---|---|
Resolution: | → fixed |
Status: | new → closed |
Fixed in hrev58064.
Test INVALID - per UNIX 2003 compliance.
Please close this ticket.